add header block elements

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,9 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+    <div class="me">
+      <h1>Hola! My name is Alphania Wanjira</h1>
+    </div>
 
   </body>
 </html>
