--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
   <body>
     <div class="me">
       <h1>Hola! My name is Alphania Wanjira</h1>
+      <p>I studied at <strong>Starehe Girls' Center</strong> and completed in 2018. I worked at Equity for 6 months in 2019, as a Relationships officer. I left to join an intensive college access program. After the program, worked as a volunteer at a school for 2 months then proceeded to join Moringa School in February 2020.</p>
     </div>
 
   </body>
