add 2nd paragraph block element

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
     <div class="me">
       <h1>Hola! My name is Alphania Wanjira</h1>
       <p>I studied at <strong>Starehe Girls' Center</strong> and completed in 2018. I worked at Equity for 6 months in 2019, as a Relationships officer. I left to join an intensive college access program. After the program, worked as a volunteer at a school for 2 months then proceeded to join Moringa School in February 2020.</p>
+      <p>I have an adventurous personality. After interacting with code through SPOC and Khan Academy, I realized that programming will satisfy my interest in trying out something new. It offers many ways to do something. It also has that room for error and lets me correct it, at the same time learning something new.</p>
     </div>
 
   </body>
