add unordered list elements

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,11 @@
       <p>I have an adventurous personality. After interacting with code through SPOC and Khan Academy, I realized that programming will satisfy my interest in trying out something new. It offers many ways to do something. It also has that room for error and lets me correct it, at the same time learning something new.</p>
     </div>
     <h2>I absolutely love</h2>
+    <ul>
+      <li>Drawing- I draw my inspirations from my immediate environment.</li>
+      <li>Hiking- I love staying outdoors and exploring nature</li>
+      <li>Reading novels- I guess that's how I lost count of the number of novels I've read</li>
+    </ul>
 
   </body>
 </html>
