add website header element

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,7 @@
       <li>Hiking- I love staying outdoors and exploring nature</li>
       <li>Reading novels- I guess that's how I lost count of the number of novels I've read</li>
     </ul>
+    <h2>Websites</h2>
 
   </body>
 </html>
