add paragraph element

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,6 +18,7 @@
       <li>Reading novels- I guess that's how I lost count of the number of novels I've read</li>
     </ul>
     <h2>Websites</h2>
+    <p>To see more websites I have created use the following links:</p>
 
   </body>
 </html>
