add ordered list elements

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,6 +19,11 @@
     </ul>
     <h2>Websites</h2>
     <p>To see more websites I have created use the following links:</p>
-
+    <div class="links">
+     <ol>
+       <li>I used HTML to create this website. The website contains information on what you will get to learn as a programmer.</li>
+       <li>I created this website using HTML.</li>
+     </ol>
+    </div>
   </body>
 </html>
