add website 2 description

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
     <div class="links">
      <ol>
        <li><a href="https://alphaniamuthee.github.io/My-first-website.github.io/">My first Website</a> I used HTML to create this website and CSS stylesheets to style it. The website contains information on what you will get to learn as a programmer.</li>
-       <li><a href="https://alphaniamuthee.github.io/Akan-names.github.io/">Akan Names Generator</a>I created this website using HTML.</li>
+       <li><a href="https://alphaniamuthee.github.io/Akan-names.github.io/">Akan Names Generator</a>I created this website using HTML, CSS and JS. The site uses user's birthday and gender input to generate a week(akan) name.</li>
      </ol>
     </div>
   </body>
